# pycount_ik

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycount_ik/: __init__.py
tests/: test_pycount_ik.py
